feat 添加查询条件生成器